@@ -7,6 +7,8 @@
 * [*] [internal] Update Gravatar SDK to 3.0.0 [#23701]
 * [*] Use the Gravatar Quick Editor to update the avatar [#23729]
 * [*] (Hidden under a feature flag) User Management for self-hosted sites. [#23768]
+* [*] Enable quick access to notifications from Reader on iPad [#23882]
+* [*] Add support for restricted posts in Reader [#23853]
 
 25.5
 -----
